test/e2e/testdata/metrics-with-prefix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: metric-otel-prefix
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: metric-otel-prefix
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: metric-otel-prefix
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  logging:
    level:
      default: debug
  telemetry:
    metrics:
      prometheus: {}
      sinks:
        - type: OpenTelemetry
          openTelemetry:
            backendRefs:
              - name: otel-collector
                namespace: monitoring
                port: 4317
            prefix: eg_e2e_prefix
  shutdown:
    drainTimeout: 5s
    minDrainDuration: 1s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metric-otel-prefix
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: metric-otel-prefix
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prom-prefix
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-prometheus
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: eg-addons
    app.kubernetes.io/name: opentelemetry-collector
    component: standalone-collector
  ports:
    - name: metrics
      protocol: TCP
      port: 19001
      targetPort: 19001
  type: LoadBalancer
